kubernetes/apps/monitoring/kubernetes-dashboard/app/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &app kubernetes-dashboard
  namespace: networking
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - match: Host(`kubernetes.${SECRET_DOMAIN}`)
      kind: Rule
      # Enable auth middleware
      middlewares:
        - name: crowdsec-traefik-bouncer
        - name: ipfilter-internal
        # - name: basicauth
      services:
        - name: *app
          namespace: monitoring
          port: 443
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
